--- a/src/resources/style/ComponentStyle.css
+++ b/src/resources/style/ComponentStyle.css
@@ -37,14 +37,7 @@
   text-transform: uppercase;
   margin: 2rem 0;
 }
-.empty-search {
-  text-align: center;
-  text-transform: capitalize;
-  margin: 2rem 0;
-  padding: 1rem;
-  letter-spacing: var(--mainSpacing);
-}
-/* end of globals */
+
 
 /* Hero */
 .defaultHero,
@@ -108,7 +101,8 @@
   margin-bottom: 4rem;
 }
 .section-title h4 {
-  font-size: 2rem;
+  font-size: 2.25rem;
+  font-weight: bolder;
   letter-spacing: var(--mainSpacing);
   text-transform: capitalize;
   margin-bottom: 1rem;
@@ -124,18 +118,12 @@
 /* services */
 .services {
   padding: 5rem 0;
-}
-.services {
-  background: var(--darkGrey);
   text-align: center;
 }
 .services-center {
-  width: 90vw;
-  margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(255px, 1fr));
   grid-row-gap: 2rem;
-  grid-column-gap: 50px;
 }
 .service span {
   display: inline-block;
@@ -143,25 +131,14 @@
   font-size: 2.5rem;
   margin-bottom: 1.5rem;
 }
-.services h6 {
-  letter-spacing: var(--mainSpacing);
-}
+
 .services p {
   width: 80%;
   margin: 0 auto;
-}
-@media screen and (min-width: 992px) {
-  .services-center {
-    width: 95vw;
-    max-width: 1170px;
-  }
+  font-weight: bolder;
 }
 
-@media screen and (min-width: 1200px) {
-  .services p {
-    width: 100%;
-  }
-}
+
 /*end of services */
 /* featured rooms */
 
@@ -172,206 +149,371 @@
   background: var(--primaryColor);
 }
 
-.featured-rooms {
-  padding: 5rem 0;
-}
-.featured-rooms-center {
-  width: 80vw;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
-  grid-row-gap: 2rem;
-  grid-column-gap: 40px;
-}
-@media screen and (min-width: 776px) {
-  .featured-rooms-center {
-    width: 90vw;
-    grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
-  }
-}
-@media screen and (min-width: 992px) {
-  .featured-rooms-center {
-    width: 95vw;
-    max-width: 1170px;
-  }
-}
-/* end pf featured rooms */
-
-
-/* room */
-.room {
-  box-shadow: var(--lightShadow);
-  transition: var(--mainTransition);
-}
-.room:hover {
-  box-shadow: var(--darkShadow);
+.descriptionCard{
+  width: 15rem;
+  height: 20rem;
+  margin: 10%;
+  text-align: 'center' 
 }
 
-.img-container {
-  position: relative;
+
+
+/* Homeeeeeeeeeeeeeeeeeeeeeeee */
+
+
+/*  Start Of SearchHome */
+
+.HomeSearch {
+  /* padding: 1% 9%; */
+  margin-left:30% !important;
 }
-.img-container img {
-  width: 100%;
-  display: block;
-  transition: var(--mainTransition);
+
+.HomeSearch option, .HomeSearch select {
+  border-radius: 1rem;
 }
-.price-top {
-  position: absolute;
+
+.HomeSearch form .inputBox {
+  display:flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  padding: 2%;
+  margin-top: 1%;
+}
+
+.HomeSearch form .inputBox input,
+.HomeSearch form .inputBox select {
+  flex: 1 1 25rem;
+  /* border: 0.1rem solid #333; */
+  font-size: 110%;
+  padding: 2%;
+}
+
+.HomeSearch form .btn {
+  width: 70%;
+  margin: 2% 17% ;
+  border-radius: 5rem;
+  font-size: 1.25rem;
+  color: white;
+  background: var(--primaryColor);
+  cursor: pointer;
+}
+
+
+.HomeSearch form {
+  background: rgb(220, 208, 208);
+  border-radius: 1rem;
+  width: 80%;
+  padding: 2%;
+}
+
+/*  Start Of SearchHome */
+
+
+
+/*  Start Of Navbar */
+
+.navbar {
+  position: fixed;
   top: 0;
   left: 0;
-  background: rgba(0, 0, 0, 0.8);
-  color: var(--mainWhite);
-  padding: 0.3rem 0.6rem 0.5rem;
-  border-bottom-right-radius: 1rem;
-  font-size: 0.5rem;
-  text-align: center;
-  transition: var(--mainTransition);
-}
-.price-top h6 {
-  margin-bottom: 0;
-  font-size: 0.9rem;
-  font-weight: 300;
-  letter-spacing: var(--mainSpacing);
-}
-.room-link {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: scale(0);
-  transition: all 0.3s linear;
-}
-.img-container:hover {
-  background: rgba(0, 0, 0, 0.8);
-}
-.img-container:hover img {
-  opacity: 0.3;
-}
-.img-container:hover .price-top {
-  opacity: 0;
-}
-.img-container:hover .room-link {
-  transform: translate(-50%, -50%) scale(1);
-}
-.room-info {
-  background: var(--darkGrey);
-  text-transform: capitalize;
-  padding: 0.5rem 0;
-  text-align: center;
-  font-weight: 700;
-  letter-spacing: var(--mainSpacing);
-}
-/* end of room  */
-
-/* single room*/
-
-.single-room {
-  padding: 5rem 0 0 0;
-}
-.single-room-images {
-  width: 80vw;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-  grid-row-gap: 2rem;
-  grid-column-gap: 50px;
-}
-.single-room-images img {
   width: 100%;
-  display: block;
+  padding: 0.75rem 2rem;
+  background: var(--offWhite);
+  z-index: 1;
 }
-.single-room-info {
-  width: 80vw;
-  display: grid;
-  grid-template-columns: 1fr;
-  margin: 2rem auto;
+.nav-header {
+  display: flex;
+  justify-content: space-between;
 }
-.desc,
-.info {
-  margin: 1rem 0;
+.nav-btn {
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
 }
-.desc h3 {
-  text-transform: capitalize;
-  letter-spacing: var(--mainSpacing);
+.nav-icon {
+  font-size: 1.5rem;
+  color: var(--primaryColor);
 }
-.desc p {
-  line-height: 1.5;
-}
-.info h3,
-.info h6 {
-  text-transform: capitalize;
-  letter-spacing: var(--mainSpacing);
-}
-
-.info h6 {
-  font-weight: 300;
-}
-.room-extras {
-  width: 80vw;
-  margin: 0 auto 3rem auto;
-}
-.room-extras h6 {
-  text-transform: capitalize;
-  letter-spacing: var(--mainSpacing);
-}
-.extras {
+.nav-links {
+  height: 0;
+  overflow: hidden;
+  transition: var(--mainTransition);
   list-style-type: none;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
-  grid-column-gap: 2rem;
-  grid-row-gap: 1rem;
 }
-@media screen and (min-width: 992px) {
-  .single-room-images,
-  .single-room-info,
-  .room-extras {
-    width: 95vw;
+.nav-links a {
+  display: block;
+  text-decoration: none;
+  padding: 1rem 0;
+  color: var(--mainBlack);
+  transition: var(--mainTransition);
+  text-align: center;
+  font-size: 1rem;
+  font-weight: 600;
+  letter-spacing: var(--mainSpacing);
+}
+.nav-links a:hover {
+  color: var(--primaryColor);
+}
+
+.show-nav {
+  height: 400px;
+}
+@media screen and (min-width: 768px) {
+  .nav-btn {
+    display: none;
+  }
+  .nav-center {
     max-width: 1170px;
+    margin: 0 auto;
+    display: flex;
   }
-  .single-room-info {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-column-gap: 2rem;
+  .nav-links {
+    height: auto;
+    display: flex;
+    margin-left: 4rem;
   }
-  .info {
-    padding-left: 3rem;
-  }
-}
-/* end of single room*/
-/* roomlist */
-.roomslist {
-  padding: 5rem 0;
-}
-.roomslist-center {
-  width: 80vw;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
-  grid-row-gap: 2rem;
-  grid-column-gap: 30px;
-}
-
-@media screen and (min-width: 776px) {
-  .roomslist-center {
-    width: 90vw;
+  .nav-links a {
+    margin: 0 1rem;
+    padding: 0.5rem 0;
   }
 }
-@media screen and (min-width: 992px) {
-  .roomslist-center {
-    width: 95vw;
-    max-width: 1170px;
-  }
-}
-/* end of roomlist */
+/* End Of Navbar */
 
 
-.footer{
-  background-color: "#F8F8F8";
-  border-top : "1px solid #E7E7E7";
-  text-align: "center";
-  padding: "20px";
-  left: "0";
-  bottom: "0";
-  height: "60px";
-  width: "100%";
-  display: 'block'
+
+
+/* Start Of PropertyHomeCard */
+
+.section-heading h2 {
+  text-align: center;
+  padding-bottom: 4%;
+  font-weight: 700;
 }
+.apartment{
+  margin-bottom: 15%;
+  color: #1b0349 !important;
+}
+.apartment .card-title {
+  background-color: #2b0371;
+  text-align: center;
+  padding: 5%;
+  font-size: 140%;
+  font-weight: 600;
+  color: #fff;
+  margin-bottom: 0;
+}
+.apartment-footer {
+  position: relative;
+  padding: 0 20% 0 5% ;
+}
+.apartment .card-body p span{
+  color: #823afe;
+  padding-right: 10px;
+}
+
+.apartment-footer h4 {
+  font-weight: 700;
+  font-size: 125%;
+}
+button.apt-btn {
+  background-color: #5616c4;
+  border: 1px soild #ffffff !important;
+  border-radius: 25px;
+  border-color: #ffffff !important;
+  padding: 3%;
+  color: #fff;
+  font-weight: 600;
+  margin: 4% 2% 2% 1%;    
+}
+Button.apt-btn:hover{
+  padding: 2%;
+  background-color: #fff;
+  border: 1px soild #823afe;
+  color: #823afe;
+}
+
+/* End Of PropertyHomeCard */
+
+
+  /*Start OF ClientFeedback  */
+  .carousel-root {
+    /* width: 64% !important; */
+    margin: auto !important;
+    margin-top: 3% !important;
+    padding-bottom: 5%;
+  }
+.carousel.carousel-slider {  
+    position: relative;
+    margin: 0;
+    overflow: hidden;
+}
+  .carousel .slide {
+    background: #fff !important;
+    color: black;
+    height: 100%;
+  }
+  
+  .carousel .slide img {
+    width: 139px !important;
+    border-radius: 50%;
+  }
+  
+  .myCarousel {
+    background: #fafafa;
+    margin-top: -6%;
+    width: 54%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 6%;
+    padding-bottom: 8%;
+    padding-left: 5%;
+    padding-right: 5%;
+    border: 1px solid #ddd;
+    height: 286px;
+  }
+  
+  .carousel .control-dots {
+    padding-left: 5px !important;
+    outline: 0;
+    bottom: 20% !important;
+  }
+  
+  .myCarousel h3 {
+    color: #222;
+    font-weight: 100;
+    letter-spacing: 0.2px;
+    margin-bottom: 4px;
+    font-weight: 600;
+    text-transform: uppercase;
+    font-size: 17px;
+  }
+  
+  .myCarousel h4 {
+    text-transform: uppercase;
+    margin-top: 0;
+    padding-top: 0;
+    font-weight: 500;
+    color: #787878;
+    font-size: 14px;
+  }
+  
+  .myCarousel p {
+    font-weight: 100 !important;
+    line-height: 29px !important;
+    color: #222;
+    font-size: 15px;
+    font-family: sans-serif;
+    max-height: 67px;
+  }
+  
+  .myCarousel p:before,
+  .myCarousel p:after {
+    content: "“";
+    color: #aaa;
+    font-size: 26px;
+    font-family: monospace;
+    font-weight: 100;
+  }
+  
+  
+  .carousel .control-dots .dot {
+    box-shadow: none !important;
+    background: #454545 !important;
+    outline: 0;
+  }
+  
+  .carousel.carousel-slider .control-arrow {
+    background: #ff5a3c !important;
+    height: 50px !important;
+    position: absolute;
+    top: 35% !important;
+  }
+  
+  .App {
+    text-align: center;
+  }
+  
+  @media only screen and (max-width: 934px) {
+    .carousel-root {
+      outline: 0;
+      width: 93% !important;
+      margin: auto !important;
+    }
+  
+    .carousel.carousel-slider .control-arrow {
+      display: none !important;
+    }
+    .myCarousel {
+      background: #ffffff;
+      margin-top: -8%;
+      width: 88%;
+      margin-left: auto;
+      margin-right: auto;
+      padding-top: 10%;
+      padding-bottom: 10%;
+      padding-left: 5%;
+      padding-right: 5%;
+      border: 1px solid rgb(235, 230, 230);
+      height: 269px;
+    }
+  
+    .carousel .slide img {
+      width: 20% !important;
+      border-radius: 50%;
+    }
+  }
+
+  /*END OF ClientFeedback  */
+
+
+
+  /* Start Of Footer */
+
+  .footer{
+    background: url('../images/footer-img.jpg');
+    background-color: #561cbacb;
+    background-size:cover;
+    background-position:center center;
+    padding: 10px 0;
+}
+.widget-heading h4{
+    color: var(--primaryColor)    ;
+    font-weight: 600;
+    margin-bottom: 3px;
+    left: 1%;
+
+}
+.footer .about p{
+    color: #fff;
+}
+.address ul li {
+    list-style: none;
+    color: #fff;
+    padding-bottom: 5%;
+}
+.address ul,
+.quick-links ul {
+    padding: 0;
+    margin: 0;
+}
+.address ul li span{
+    color: var(--primaryColor)
+    ;
+}
+.quick-links ul li {
+    list-style: none;
+    padding-bottom: 5%;
+}
+.quick-links ul li a {
+    color: #fff;
+    transition: all 1s ease;
+    text-decoration: none;
+
+}
+.quick-links ul li a:hover {
+    color: #e4b828;
+    text-decoration: none;
+}
+
+  /* End Of Footer */
