--- a/src/resources/profile/profile.css
+++ b/src/resources/profile/profile.css
@@ -1,4 +1,4 @@
-h3 {
+/* h3 {
     margin: 10px 0;
   }
   
@@ -58,4 +58,4 @@ h3 {
     background-color: transparent;
     color: #02899C;
   }
-  
+   */
