--- a/src/components/clientsReview/clients.css
+++ b/src/components/clientsReview/clients.css
@@ -74,7 +74,7 @@ h1{
   margin-right: 1rem;
   font-weight: 700;
 }
-.section-center {
+.section-centers {
   margin: 0 auto;
   margin-top: 4rem;
   width: 80vw;
